--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-7">
-          <h1 style="font-size:64px; margin-left:2%;">Hello,</h1>
-          <h4 style="font-family:calibri;font-weight:lighter;color:#4d4d4d;width:92%; margin-left:8%;">My name is Amber Lin. I have recently graduated from University of Michigan, School of Information with Human Computer Interaction (HCI) and Library and Information Science (LIS) specialization. Currently, I am seeking a full-time position as an UX designer or researcher.
+          <h1 style="font-size:50px; margin-left:2%;">Hello,</h1>
+          <h4 style="color:#4d4d4d;width:92%; margin-left:8%; font-weight:300; margin-bottom:50px;">My name is Amber Lin. I have recently graduated from University of Michigan, School of Information with Human Computer Interaction (HCI) and Library and Information Science (LIS) specialization. Currently, I am seeking a full-time position as an UX designer or researcher.
           </br>
           </br>
           I am passionate about observing people. I love to observe their behavior, understand their thoughts, and further design solutions in response to their needs. I believe people are the central of good design products; understand our users is the first step for creating the best user experience. Also, I like to collaborate with diverse people, it always helps me learn more ideas and think outside the box.
@@ -79,7 +79,7 @@
         <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
         <div class="footer-social">
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
+
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
         </div>
