--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="project-item" onclick="location.href='project_aiminspect.html';">
               <img src="img/Project/aiminspect_grey.png">
-              <div class="project-intro text-center">
+              <div class="project-intro">
                 <div class="project-intro-text">
                   <h2>AiM Inspect</h2>
                   <p>Android App Design</p>
@@ -67,7 +67,7 @@
             <div class="project-item" onclick="location.href='project_aimschedule.html';">
               <img src="img/Project/aimschedule_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+                
                 <div class="project-intro-text">
                   <h2>AiM Schedule</h2>
                   <p>Android App Design</p>
@@ -79,7 +79,7 @@
             <div class="project-item" onclick="location.href='project_aimcrm.html';">
               <img src="img/Project/aimcrm_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+
                 <div class="project-intro-text">
                   <h2>AiM CRM</h2>
                   <p>Web Design</p>
@@ -91,7 +91,7 @@
             <div class="project-item" onclick="location.href='project_giftmasters.html';">
               <img src="img/Project/giftmasters_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+
                 <div class="project-intro-text">
                   <h2>GIFT MASTERS</h2>
                   <p>Web Design</p>
@@ -103,7 +103,7 @@
             <div class="project-item" onclick="location.href='project_kono.html';">
               <img src="img/Project/kono_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+
                 <div class="project-intro-text">
                   <h2>KONO</h2>
                   <p>UX Design & Research</p>
@@ -115,7 +115,7 @@
             <div class="project-item" onclick="location.href='project_nuwa.html';">
               <img src="img/Project/nuwa_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+
                 <div class="project-intro-text">
                   <h2>NUWA</h2>
                   <p>CHI 2014 Student Design Competition</p>
@@ -127,7 +127,7 @@
             <div class="project-item" onclick="location.href='project_clotho.html';">
               <img src="img/Project/clotho_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+
                 <div class="project-intro-text">
                   <h2>CLOTHO</h2>
                   <p>Interaction Design</p>
@@ -139,7 +139,7 @@
             <div class="project-item" onclick="location.href='project_uxi.html';">
               <img src="img/Project/uxi_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+
                 <div class="project-intro-text">
                   <h2>UXI DESIGN</h2>
                   <p>UX Design & Research Intern</p>
@@ -151,7 +151,7 @@
             <div class="project-item" onclick="location.href='project_floc.html';">
               <img src="img/Project/floc_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+
                 <div class="project-intro-text">
                   <h2>FLOC</h2>
                   <p>UX Design & Research Intern</p>
@@ -163,7 +163,7 @@
             <div class="project-item" onclick="location.href='project_graphic.html';">
               <img src="img/Project/graphic_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+
                 <div class="project-intro-text">
                   <h2>GRAPHIC DESIGN</h2>
                   <p>Design Works</p>
@@ -175,7 +175,7 @@
             <div class="project-item" onclick="location.href='project_map.html';">
               <img src="img/Project/map_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+
                 <div class="project-intro-text">
                   <h2>MAP</h2>
                   <p>Contextual Inquiry</p>
@@ -187,7 +187,7 @@
             <div class="project-item" onclick="location.href='project_scistarter.html';">
               <img src="img/Project/scistarter_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+
                 <div class="project-intro-text">
                   <h2>SCISTARTER</h2>
                   <p>Usability Evaluation</p>
@@ -199,7 +199,7 @@
             <div class="project-item" onclick="location.href='project_starbucks.html';">
               <img src="img/Project/fieldwork_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+
                 <div class="project-intro-text">
                   <h2>STARBUCKS</h2>
                   <p>Fieldwork Research</p>
@@ -211,7 +211,7 @@
             <div class="project-item" onclick="location.href='project_infovis.html';">
               <img src="img/Project/infovis_grey.png">
               <div class="project-intro">
-                <img src="img/project-bg.png">
+
                 <div class="project-intro-text">
                   <h2>OSCAR BEST PICTURE</h2>
                   <p>Information Visualization</p>
