--- a/project_clotho.html
+++ b/project_clotho.html
@@ -94,7 +94,7 @@
             </div>
     </div>
     <div class="row">
-        <div class="col-xs-7 detail-wrap">
+        <div class="col-sm-7 detail-wrap">
             <h3>Overview</h3>
             <p>This is an individual project in SI 582 (Introduction to Interaction Design) class, I designed a mobile application named Clotho that not only helps people who live near can sell, buy and swap their pre-loved clothes to each other, but also
                 encourage an in-person social interaction between neighbors to let community members have a much closer relationship.</p>
@@ -134,7 +134,7 @@
 
             </p>
         </div>
-        <div class="col-xs-5" id="img-section">
+        <div class="col-sm-5" id="img-section">
             <div class="img-text-section">
                 <img class="project-img" src="img/pic/clotho_persona.png" />
                 <p>Persona</p>
@@ -174,11 +174,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-        // $(document).ready(function(){
-        //   $('#title-row').width($(document).width());
-        // })
-    </script>
+
 </body>
 
 </html>
