--- a/project_floc.html
+++ b/project_floc.html
@@ -13,7 +13,7 @@
     <title>Amber Lin | FLOC</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
@@ -52,7 +52,7 @@
     <div class="container">
       <div class="row row-summary">
         <div class="col-xs-12 summary-title">
-          <div><h1>For Love of Children</h1><h3>UX Design & Research Intern</h3></div>
+          <h1>For Love of Children</h1><h3>UX Design & Research Intern</h3></div>
           <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
@@ -93,20 +93,19 @@
               <p>Photoshop, Illustrator, Axure</p>
             </div>
           </div>
-        </div>
+
       </div>
       <div class="row" >
         <div class="col-xs-7 detail-wrap">
+          <h3></h3>
           <p>During the spring break in 2014, I participated in <a class='link-text' href='https://www.si.umich.edu/careers/alternative-spring-break' target="_blank">Alternative Spring Break (ASB) </a>program and worked with <a class='link-text' href='https://www.floc.org/' target="_blank">For Love of Children </a> in Washington, DC, helping them evaluate their website and redesign part of the web pages.<br>
-          <br>
-          First, we conducted a survey to understand real users’ behavior and needs; and further ask about their feedback about current website. At the same time, we did a heuristic evaluation of current website based on Jakob Nielsen’s “10 Usability Heuristics for User Interface Design”. We performed an individual analysis of the site’s major features, grouping our findings underneath Nielsen’s taxonomy. According to the results from survey response and findings from heuristic evaluation, we created mid-fi prototype. 
+          </p><p>
+          First, we conducted a survey to understand real users’ behavior and needs; and further ask about their feedback about current website. At the same time, we did a heuristic evaluation of current website based on Jakob Nielsen’s “10 Usability Heuristics for User Interface Design”. We performed an individual analysis of the site’s major features, grouping our findings underneath Nielsen’s taxonomy. According to the results from survey response and findings from heuristic evaluation, we created mid-fi prototype.
           </p>
         </div>
         <div class="col-xs-5" id="img-section">
           <div class="img-text-section">
             <img class="project-img" src="img/pic/floc_webpage.png"/>
-            <br>
-            <br>
             <p>Webpage Redesign</p>
           </div>
         </div>
@@ -118,7 +117,7 @@
         <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
         <div class="footer-social">
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
+
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
         </div>
