--- a/project_graphic.html
+++ b/project_graphic.html
@@ -13,7 +13,7 @@
     <title>Amber Lin | Graphic Design</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
@@ -52,23 +52,8 @@
     <div class="container">
       <div class="row row-summary">
         <div class="col-xs-12 summary-title">
-          <div><h1>Graphic Design</h1><h3>Design Works</h3></div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>&nbsp</p>
-            </div>
-            <div class="item-content">
-              <p>&nbsp</p>
-            </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>&nbsp</p>
-            </div>
-            <div class="item-content">
-              <p>&nbsp</p>
-            </div>
-          </div>
+          <h1>Graphic Design</h1><h3>Design Works</h3></div>
+
           <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
@@ -93,66 +78,47 @@
               <p>Photoshop, Illustrator, InDesign</p>
             </div>
           </div>
-        </div>
       </div>
       <div class="row" >
         <div class="col-xs-12 detail-wrap">
+          <h3>Graphic Design</h3>
           <p>These graphic design works include banner, brochure, postcard, poster and website mockup.</p>
-          <br>
-          <br>
+
           <div class="img-text-big-section">
             <img class="project-big-img" src="attachment/graphic_timeline.png"/>
-            <br>
-            <br>
             <p>Timeline Poster Design</p>
           </div>
-          <br>
-          <br>
+
           <div class="img-text-big-section">
             <img class="project-big-img" src="attachment/graphic_alphabet.png"/>
-            <br>
-            <br>
             <p>Alphabet Poster Design</p>
           </div>
-          <br>
-          <br>
+
           <div class="img-text-big-section">
             <img class="project-big-img" src="attachment/graphic_brochure1.png"/>
-            <br>
-            <br>
             <img class="project-big-img" src="attachment/graphic_brochure2.png"/>
-            <br>
-            <br>
             <p>Hometown Brochure Design</p>
           </div>
-          <br>
-          <br>
+
           <div class="img-text-big-section">
             <img class="project-big-img" src="attachment/graphic_slider.png"/>
-            <br>
-            <br>
+
             <p>Slider Mockup</p>
           </div>
-          <br>
-          <br>
+
           <div class="img-text-big-section">
             <img class="project-big-img" src="attachment/graphic_twitter.png"/>
-            <br>
-            <br>
             <p>Twitter Backgroud Mockup</p>
           </div>
-          <br>
-          <br>
+
           <div class="img-text-big-section">
             <img class="project-big-img" src="attachment/graphic_webr1.png"/>
-            <br>
-            <br>
+
             <img class="project-big-img" src="attachment/graphic_webr2.png"/>
-            <br>
-            <br>
+
             <p>Website Mockup</p>
           </div>
-        </div>       
+        </div>
       </div>
     </div><!-- /.container -->
 
@@ -161,7 +127,7 @@
         <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
         <div class="footer-social">
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
+
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
         </div>
