--- a/project_infovis.html
+++ b/project_infovis.html
@@ -13,7 +13,7 @@
     <title>Amber Lin | Oscar Best Picture</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
@@ -52,15 +52,7 @@
     <div class="container">
       <div class="row row-summary">
         <div class="col-xs-12 summary-title">
-          <div><h1>Oscar Best Picture</h1><h3>Information Visualization</h3></div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>&nbsp</p>
-            </div>
-            <div class="item-content">
-              <p>&nbsp</p>
-            </div>
-          </div>
+          <h1>Oscar Best Picture</h1><h3>Information Visualization</h3></div>
           <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
@@ -92,22 +84,24 @@
             <div class="item-content">
               <p>D3 / SVG, JavaScript, Python</p>
             </div>
-          </div>
         </div>
       </div>
       <div class="row" >
         <div class="col-xs-7 detail-wrap">
-          <p>We used the data set of Oscar Best Picture movies, including winners and nominees from 1929 to 2014 and compared different variables, including rating, votes, budget, gross, and genre. We designed this visualization for users who want to find the trend and characteristics of Oscar Best Picture movies.<br> 
-          <br>
+          <h3></h3>
+          <p>We used the data set of Oscar Best Picture movies, including winners and nominees from 1929 to 2014 and compared different variables, including rating, votes, budget, gross, and genre. We designed this visualization for users who want to find the trend and characteristics of Oscar Best Picture movies.<br>
+          </p><p>
           We did three visualizations to show the full context that corresponds to our use case:<br>
-          <br>
-          • An animated bubble chart shows all Oscar Best Picture movies to see the quantity and gross of each genre<br>
-          • An interactive scatter plot shows the relation among gross, budget and rating for all winners and nominees<br>
-          • A multi­series line chart shows the comparison of all movies or winners/nominees by the five variables<br>
-          <br>
-          <br>
+        </p>
+          <ul>
+
+          <li>An animated bubble chart shows all Oscar Best Picture movies to see the quantity and gross of each genre</li>
+          <li>An interactive scatter plot shows the relation among gross, budget and rating for all winners and nominees</li>
+          <li>A multi­series line chart shows the comparison of all movies or winners/nominees by the five variables</li>
+        </ul>
+          <p><br></p>
           <a class='attachment-text' href='http://infovis.liu-xin.com/'  target="_blank">➢ Live Demo</a><br>
-          </p>
+
         </div>
         <div class="col-xs-5" id="img-section">
           <div class="img-text-section">
@@ -131,7 +125,7 @@
         <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
         <div class="footer-social">
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
+
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
         </div>
