--- a/project_map.html
+++ b/project_map.html
@@ -13,7 +13,7 @@
     <title>Amber Lin | MAP</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
@@ -52,15 +52,7 @@
     <div class="container">
       <div class="row row-summary">
         <div class="col-xs-12 summary-title">
-          <div><h1>Michigan Ability Partner</h1><h3>Contextual Inquiry</h3></div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>&nbsp</p>
-            </div>
-            <div class="item-content">
-              <p>&nbsp</p>
-            </div>
-          </div>
+          <h1>Michigan Ability Partner</h1><h3>Contextual Inquiry</h3></div>
           <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
@@ -93,18 +85,19 @@
               <p>Contextual Inquiry, Affinity Diagrams, Interviews</p>
             </div>
           </div>
-        </div>
       </div>
       <div class="row" >
         <div class="col-xs-7 detail-wrap">
+          <h3></h3>
           <p>This is a group project in SI 501 (Contextual Inquiry and Project Management) class. We worked with <a class='link-text' href='http://www.mapagency.org/' target="_blank"> Michigan Ability Partner (MAP) </a> to help them improve their contact process.<br>
-          <br>
+          </p>
+          <p>
           We conducted six semi-structured contextual interviews with MAP staff and held a series of interpretation sessions. After all the interviews, we developed an affinity wall to group affinity notes to help find out what works well, some breakdowns and some design ideas. Also, we created flow model that illuminates the organization’s development process and further provide implement recommendations for improving their contact information management and fund-raising process.<br>
-          <br>
-          <br>
+          </p>
+          <p><br></p>
           <a class='attachment-text' href='attachment/map_report.pdf'  target="_blank">➢ Final Report (PDF)</a><br>
           <a class='attachment-text' href='attachment/map_presentation.pdf'  target="_blank">➢ Final Presentation (PDF)</a><br>
-          </p>
+
         </div>
         <div class="col-xs-5" id="img-section">
           <div class="img-text-section">
@@ -124,7 +117,7 @@
         <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
         <div class="footer-social">
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
+
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
         </div>
