--- a/project_nuwa.html
+++ b/project_nuwa.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
@@ -13,158 +14,171 @@
     <title>Amber Lin | Nuwa</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
 
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
     <div class="navbar navbar-fixed-top" role="navigation" id="navi-section">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX/UI Designer</div></a>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-logo" href="index.html"><img src="img/logo.png" />
+                    <div class='logo-name'>Amber Lin</div>
+                    <div class='logo-title'>UX/UI Designer</div>
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse-id">
+                <ul id="navi-menu" class="nav navbar-nav">
+                    <!-- <li class="active"><a href="#">Home</a></li> -->
+                    <li class="active"><a href="index.html">Portfolio</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse-id">
-          <ul id="navi-menu" class="nav navbar-nav">
-            <!-- <li class="active"><a href="#">Home</a></li> -->
-            <li class="active"><a href="index.html">Portfolio</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="resume.html">Resume</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </div>
 
     <div class="container">
-      <div class="row row-summary">
-        <div class="col-xs-12 summary-title">
-          <div><h1>Nuwa</h1><h3>CHI 2014 Student Design Competition</h3></div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>Date:</p>
+        <div class="row row-summary">
+            <div class="col-xs-12 summary-title">
+                <h1>Nuwa</h1>
+                <h3>CHI 2014 Student Design Competition</h3></div>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Date:</p>
+                </div>
+                <div class="item-content">
+                    <p>Sep. 2013 - Apr. 2014</p>
+                </div>
             </div>
-            <div class="item-content">
-              <p>Sep. 2013 - Apr. 2014</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Team Member:</p>
+                </div>
+                <div class="item-content">
+                    <p>Xin Liu, Yuan Gao, Xinying Li, Lin Pang</p>
+                </div>
             </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>Team Member:</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>My Role:</p>
+                </div>
+                <div class="item-content">
+                    <p>UX Designer and Researcher</p>
+                </div>
             </div>
-            <div class="item-content">
-              <p>Xin Liu, Yuan Gao, Xinying Li, Lin Pang</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Skills:</p>
+                </div>
+                <div class="item-content">
+                    <p>Interviews, Survey Design, Prototyping, User Testing</p>
+                </div>
             </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>My Role:</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Tools:</p>
+                </div>
+                <div class="item-content">
+                    <p>Balsamiq, Photoshop, Illustrator, Axure</p>
+                </div>
             </div>
-            <div class="item-content">
-              <p>UX Designer and Researcher</p>
-            </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>Skills:</p>
-            </div>
-            <div class="item-content">
-              <p>Interviews, Survey Design, Prototyping, User Testing</p>
-            </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>Tools:</p>
-            </div>
-            <div class="item-content">
-              <p>Balsamiq, Photoshop, Illustrator, Axure</p>
-            </div>
-          </div>
         </div>
-      </div>
-      <div class="row" >
-        <div class="col-xs-7 detail-wrap">
-          <p>Nuwa got accepted in <a class='link-text' href='http://chi2014.acm.org/authors/student-design-competition' target="_blank"> CHI 2014 Student Design Competition</a> Top 12 out of 65 teams and was presented at CHI 2014 conference.</p>
-          <br>
-          <h4>Design Problem</h4>
-          </br>
-          <p>Pregnancy is a complicated and special process with many bodily changes, discomforts, and sometimes complications. We learned that pregnancy is a couple experience for most people, which involves the cooperation of both expectant parents.<br>
-          <br>
-          Even though currently there are lots of resources helping the pregnancy process, we found that some problems still exist:<br>
-          <br>
-          •  Medical interpretation is insufficient<br>
-          •  Expectant partners need more guidance<br>
-          •  Expectant mothers desire more emotional support<br></p>
-          <br>
-          <h4>Process</h4>
-          </br>
-          <p>
-          •  We conducted 10 contextual interviews and got 131 survey responses. After all the interviews, we arranged an affinity wall to group related data from interviews, find some breakdowns and generate design ideas.<br>
-          <br>
-          •  We created 4 personas to identify and prioritize uses’ needs and requirements for our design. We also generated a lot of design ideas and validated by going through scenarios and storyboards.<br>
-          <br>
-          •  We generated wireframes and mid-fi prototypes to present our design ideas, validating our design with potential users and further utilized their feedback to improve our concept and prototype accordingly.<br></p>
-          <br>
-          <h4>Solution</h4>
-          </br>
-          <p>We proposed Nuwa, a mobile system consisting of a sensing wristband and a mobile application, which aims to effectively improve expectant mothers’ self-awareness about their health conditions, and to help expectant partners better support mothers.<br>
-          <br>
-          Here are three main features of Nuwa:<br>
-          <br>
-          •  Raising awareness on maternal health condition with simple data visualization and in-time notifications<br>
-          •  Facilitating and guiding partners' support by setting and tracking goals for each other<br>
-          •  Granting mothers the information control<br>
-          <br>
-          <br>
-          <a class='attachment-text' href='attachment/nuwa_paper.pdf'  target="_blank">➢ Extended Abstract (PDF)</a><br>
-          <a class='attachment-text' href='attachment/nuwa_poster.png'  target="_blank">➢ Poster</a><br>   
-          <a class='attachment-text' href='http://gurqft.axshare.com/app_home.html' target="_blank">➢ Mid-fi Prototype</a><br>  
-          </p>
+        <div class="row">
+            <div class="col-xs-7 detail-wrap">
+                <h3>Overview</h3>
+                <p>Nuwa got accepted in <a class='link-text' href='http://chi2014.acm.org/authors/student-design-competition' target="_blank"> CHI 2014 Student Design Competition</a> Top 12 out of 65 teams and was presented at CHI 2014 conference.</p>
+                <h3>Design Problem</h3>
+
+                <p>Pregnancy is a complicated and special process with many bodily changes, discomforts, and sometimes complications. We learned that pregnancy is a couple experience for most people, which involves the cooperation of both expectant parents.</p>
+
+                <p>Even though currently there are lots of resources helping the pregnancy process, we found that some problems still exist:</p>
+                <ul>
+                    <li>Medical interpretation is insufficient</li>
+                    <li>Expectant partners need more guidance</li>
+                    <li>Expectant mothers desire more emotional support</li>
+                </ul>
+
+                <h3>Process</h3>
+                <ul class='block-list'>
+                    <li> We conducted 10 contextual interviews and got 131 survey responses. After all the interviews, we arranged an affinity wall to group related data from interviews, find some breakdowns and generate design ideas.</li>
+
+                    <li>We created 4 personas to identify and prioritize uses’ needs and requirements for our design. We also generated a lot of design ideas and validated by going through scenarios and storyboards.</li>
+
+                    <li>We generated wireframes and mid-fi prototypes to present our design ideas, validating our design with potential users and further utilized their feedback to improve our concept and prototype accordingly.</li>
+
+                </ul>
+
+                <h3>Solution</h3>
+
+                <p>We proposed Nuwa, a mobile system consisting of a sensing wristband and a mobile application, which aims to effectively improve expectant mothers’ self-awareness about their health conditions, and to help expectant partners better support</p>
+                mothers.
+                <p> Here are three main features of Nuwa:</p>
+                <ul class='block-list'>
+                    <li> Raising awareness on maternal health condition with simple data visualization and in-time notifications</li>
+                    <li> Facilitating and guiding partners' support by setting and tracking goals for each other</li>
+                    <li> Granting mothers the information control</li>
+                </ul>
+
+                <a class='attachment-text' href='attachment/nuwa_paper.pdf' target="_blank">
+                    <p>➢ Extended Abstract (PDF)</p>
+                </a>
+                <a class='attachment-text' href='attachment/nuwa_poster.png' target="_blank">
+                    <p>➢ Poster</p>
+                </a>
+                <a class='attachment-text' href='http://gurqft.axshare.com/app_home.html' target="_blank">
+                    <p>➢ Mid-fi Prototype</p>
+                </a>
+
+            </div>
+            <div class="col-xs-5" id="img-section">
+                <div class="img-text-section">
+                    <img class="project-img" src="img/pic/nuwa_affinitywall.JPG" />
+                    <p>Affinity Wall</p>
+                </div>
+                <div class="img-text-section">
+                    <img class="project-img" src="img/pic/nuwa_storyboard.JPG" />
+                    <p>Storyboard</p>
+                </div>
+                <div class="img-text-section">
+                    <img class="project-img" src="img/pic/nuwa_prototype.png" />
+                    <p>Prototype</p>
+                </div>
+                <div class="img-text-section">
+                    <img class="project-img" src="img/pic/nuwa_usertesting.JPG" />
+                    <p>User Testing</p>
+                </div>
+            </div>
         </div>
-        <div class="col-xs-5" id="img-section">
-          <div class="img-text-section">
-            <img class="project-img" src="img/pic/nuwa_affinitywall.JPG"/>
-            <p>Affinity Wall</p>
-          </div>
-          <div class="img-text-section">
-            <img class="project-img" src="img/pic/nuwa_storyboard.JPG"/>
-            <p>Storyboard</p>
-          </div>
-          <div class="img-text-section">
-            <img class="project-img" src="img/pic/nuwa_prototype.png"/>
-            <p>Prototype</p>
-          </div>
-          <div class="img-text-section">
-            <img class="project-img" src="img/pic/nuwa_usertesting.JPG"/>
-            <p>User Testing</p>
-          </div>
-        </div>
-      </div>
-    </div><!-- /.container -->
+    </div>
+    <!-- /.container -->
 
     <div class="footer">
-      <div class="container">
-        <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
-        <div class="footer-social">
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
-          <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+        <div class="container">
+            <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+            <div class="footer-social">
+                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
+
+                    <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+                    <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+            </div>
         </div>
-      </div>
     </div>
 
 
@@ -174,9 +188,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript">
-      // $(document).ready(function(){
-      //   $('#title-row').width($(document).width());
-      // })
+        // $(document).ready(function(){
+        //   $('#title-row').width($(document).width());
+        // })
     </script>
-  </body>
+</body>
+
 </html>
