--- a/project_scistarter.html
+++ b/project_scistarter.html
@@ -13,7 +13,7 @@
     <title>Amber Lin | SciStarter</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
@@ -52,15 +52,8 @@
     <div class="container">
       <div class="row row-summary">
         <div class="col-xs-12 summary-title">
-          <div><h1>SciStarter</h1><h3>Usability Evaluation</h3></div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>&nbsp</p>
-            </div>
-            <div class="item-content">
-              <p>&nbsp</p>
-            </div>
-          </div>
+          <h1>SciStarter</h1><h3>Usability Evaluation</h3></div>
+
           <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
@@ -93,19 +86,22 @@
               <p>Interaction Map, Interview, Survey, Comparative Analysis, Heuristic Evaluation</p>
             </div>
           </div>
-        </div>
+
       </div>
       <div class="row" >
         <div class="col-xs-7 detail-wrap">
+          <h3></h3>
           <p>This is a group project in SI 622 (Needs Assessment and Usability Evaluation) class. We worked with <a class='link-text' href='http://scistarter.com/' target="_blank"> SciStarter </a> to help them analyze their target users’ needs and evaluate the usability of their website by going through solid evaluation processes.<br>
-          <br>
-          SciStarter is a division of Science for Citizens, LLC, whose web presence exists to provide access to the citizen science projects it aggregates for citizen scientists around the world. The website offers a project finder that connects interested citizen scientists with projects that can be done at home. The project listings are maintained by SciStarter staff and feature research groups who would like to recruit volunteers. The goal and tasks, as well as the link for participating in the project, are found on each project page.<br>
-          <br>
-          Our team’s main goal is to evaluate the usability of the website and provide findings and recommendations to SciStarter for improving their service. We analyzed their website and built an interaction map for their web log in / log out, project browsing, and blog posting process. We also conducted surveys and interviews for potential users, developed personas and scenarios, compared with five types of competitors, did heuristic evaluation and usability testing.<br>
-          <br>
-          <br>
-          <a class='attachment-text' href='attachment/scistarter_presentation.pdf'  target="_blank">➢ Final Presentation (PDF)</a><br>
           </p>
+          <p>
+          SciStarter is a division of Science for Citizens, LLC, whose web presence exists to provide access to the citizen science projects it aggregates for citizen scientists around the world. The website offers a project finder that connects interested citizen scientists with projects that can be done at home. The project listings are maintained by SciStarter staff and feature research groups who would like to recruit volunteers. The goal and tasks, as well as the link for participating in the project, are found on each project page.<br>
+        </p>
+        <p>
+          Our team’s main goal is to evaluate the usability of the website and provide findings and recommendations to SciStarter for improving their service. We analyzed their website and built an interaction map for their web log in / log out, project browsing, and blog posting process. We also conducted surveys and interviews for potential users, developed personas and scenarios, compared with five types of competitors, did heuristic evaluation and usability testing.<br>
+
+        </p>
+          <p><br></p>
+          <a class='attachment-text' href='attachment/scistarter_presentation.pdf'  target="_blank">➢ Final Presentation (PDF)</a><br>
         </div>
         <div class="col-xs-5" id="img-section">
           <div class="img-text-section">
@@ -121,7 +117,7 @@
         <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
         <div class="footer-social">
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
+
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
         </div>
