--- a/project_starbucks.html
+++ b/project_starbucks.html
@@ -13,7 +13,7 @@
     <title>Amber Lin | Starbucks</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
@@ -52,23 +52,8 @@
     <div class="container">
       <div class="row row-summary">
         <div class="col-xs-12 summary-title">
-          <div><h1>Starbucks</h1><h3>Fieldwork Research</h3></div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>&nbsp</p>
-            </div>
-            <div class="item-content">
-              <p>&nbsp</p>
-            </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>&nbsp</p>
-            </div>
-            <div class="item-content">
-              <p>&nbsp</p>
-            </div>
-          </div>
+          <h1>Starbucks</h1><h3>Fieldwork Research</h3></div>
+
           <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
@@ -93,21 +78,25 @@
               <p>Field Research</p>
             </div>
           </div>
-        </div>
+
       </div>
       <div class="row" >
         <div class="col-xs-7 detail-wrap">
-          <p>Starbucks is one of the largest coffeehouse companies in the world. Not only because of the good espressos they serve, but also because of the wonderful customer experiences which make it become the most popular chain coffeehouse that can find in every city. They also provide reading desks, sofas, newspapers, music, and free Wi-Fi, all these things make it a more comfortable place than the library where you would go to do your homework, cozier place than your home where you would spend a whole weekend afternoon, friendlier place than the dining halls in school where you would have a chat with friends. Just order a cup of hot café latte, find a good spot in the store and you are ready to spend the next few hours to do the things you want.<br> 
-          <br>
+          <h3></h3>
+          <p>Starbucks is one of the largest coffeehouse companies in the world. Not only because of the good espressos they serve, but also because of the wonderful customer experiences which make it become the most popular chain coffeehouse that can find in every city. They also provide reading desks, sofas, newspapers, music, and free Wi-Fi, all these things make it a more comfortable place than the library where you would go to do your homework, cozier place than your home where you would spend a whole weekend afternoon, friendlier place than the dining halls in school where you would have a chat with friends. Just order a cup of hot café latte, find a good spot in the store and you are ready to spend the next few hours to do the things you want.<br>
+          </p><p>
           In order to get a more in-depth understanding of the various things done by a variety of people that visit Starbucks, I conduct a six-hour-long non-participant observation that separates into three dates in three different time periods of a day.<br>
-          <br>
-          I got three main findings from the observations:<br>
-          <br>
-          • A free public space<br>
-          • All about the atmosphere<br>
-          • Different time, different thing, different people<br>
-          <br>
-          <br>
+        </p><p>
+
+          I got three main findings from the observations:
+        </p><p>
+          <ul>
+
+          <li>A free public space</li>
+          <li>All about the atmosphere</li>
+          <li>Different time, different thing, different people</li>
+        </ul>
+        <p><br></p>
           <a class='attachment-text' href='attachment/starbucks_report.pdf'  target="_blank">➢ Final Report (PDF)</a><br>
           </p>
         </div>
@@ -125,7 +114,7 @@
         <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
         <div class="footer-social">
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
+
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
         </div>
