--- a/project_uxi.html
+++ b/project_uxi.html
@@ -13,7 +13,7 @@
     <title>Amber Lin | UXI Design</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
@@ -52,15 +52,7 @@
     <div class="container">
       <div class="row row-summary">
         <div class="col-xs-12 summary-title">
-          <div><h1>UXI Design</h1><h3>UX Design & Research Intern</h3></div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>&nbsp</p>
-            </div>
-            <div class="item-content">
-              <p>&nbsp</p>
-            </div>
-          </div>
+          <h1>UXI Design</h1><h3>UX Design & Research Intern</h3></div>
           <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
@@ -93,12 +85,13 @@
               <p>Photoshop, Illustrator</p>
             </div>
           </div>
-        </div>
       </div>
       <div class="row" >
         <div class="col-xs-7 detail-wrap">
+          <h3> </h3>
           <p>I interned at <a class='link-text' href='http://uxi-design.com/index_en.php' target="_blank"> UXI Design </a> as an UX/UI design and research intern for 2013 summer. UXI is a design company cares about how to create a better user experience and user interface. During my internship, I got involved in multiple projects: I worked with my mentor as a consultant with Microsoft Taiwan UX team to help developers understand and design Windows 8 applications with their user-centered design principles; I brainstormed with the design team and created prototypes for a new tablet operating system design, and further conducted two rounds of user testing to validate our design; I planned stakeholder interviews for initiating the website redesign and built new sitemap.<br>
-          <br>
+          </p>
+          <p>
           I am willing to share more about my work example and experiences offline!
           </p>
         </div>
@@ -116,7 +109,7 @@
         <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
         <div class="footer-social">
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
+
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
         </div>
