--- a/project_giftmasters.html
+++ b/project_giftmasters.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
@@ -13,128 +14,126 @@
     <title>Amber Lin | Gift Masters</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
 
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
     <div class="navbar navbar-fixed-top" role="navigation" id="navi-section">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX/UI Designer</div></a>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-logo" href="index.html"><img src="img/logo.png" />
+                    <div class='logo-name'>Amber Lin</div>
+                    <div class='logo-title'>UX/UI Designer</div>
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse-id">
+                <ul id="navi-menu" class="nav navbar-nav">
+                    <!-- <li class="active"><a href="#">Home</a></li> -->
+                    <li class="active"><a href="index.html">Portfolio</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse-id">
-          <ul id="navi-menu" class="nav navbar-nav">
-            <!-- <li class="active"><a href="#">Home</a></li> -->
-            <li class="active"><a href="index.html">Portfolio</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="resume.html">Resume</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </div>
 
     <div class="container">
-      <div class="row row-summary">
-        <div class="col-xs-12 summary-title">
-          <div><h1>Gift Masters</h1><h3>Online Questionnaire Design</h3></div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>&nbsp</p>
+        <div class="row row-summary">
+            <div class="col-xs-12 summary-title">
+                <h1>Gift Masters</h1>
+                <h3>Online Questionnaire Design</h3></div>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Date:</p>
+                </div>
+                <div class="item-content">
+                    <p>Apr. 2015 - Jun. 2015</p>
+                </div>
             </div>
-            <div class="item-content">
-              <p>&nbsp</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>My Role:</p>
+                </div>
+                <div class="item-content">
+                    <p>UX / UI Designer</p>
+                </div>
             </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>Date:</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Skills:</p>
+                </div>
+                <div class="item-content">
+                    <p>Wireframing, Prototyping</p>
+                </div>
             </div>
-            <div class="item-content">
-              <p>Apr. 2015 - Jun. 2015</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Tools:</p>
+                </div>
+                <div class="item-content">
+                    <p>Photoshop, Illustrator, Justinmind</p>
+                </div>
             </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>My Role:</p>
-            </div>
-            <div class="item-content">
-              <p>UX / UI Designer</p>
-            </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>Skills:</p>
-            </div>
-            <div class="item-content">
-              <p>Wireframing, Prototyping</p>
-            </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>Tools:</p>
-            </div>
-            <div class="item-content">
-              <p>Photoshop, Illustrator, Justinmind</p>
-            </div>
-          </div>
         </div>
-      </div>
-      <div class="row" >
-        <div class="col-xs-12 detail-wrap">
-          <p>This is the project I worked with 199 insights, Inc. We were building a website named Gift masters. It is a website which helps people choose gift for their friends or significant other. With completing a short questionnaire, our system will give the user a list of personalized gift recommendations.</p>
-          <br>
-          <h4>Design Process</h4>
-          <img class="full-width-img" src="img/pic/giftmasters_designprocess.png"/>
-          <h4>My Responsibilities</h4>
-          </br>
-          <p>• Created wireframes showing the end-to-end experience</p>
-          <p>• Generated a high fidelity prototype for one most complicated use case</p>
-          <p>• Designed and Defined all UI elements</p>
-          <br>
-          <h4>Sample Mockups</h4>
-          <div class="col-sm-6">
-            <img class="full-width-img" src="img/pic/giftmasters_initial.png"/>
-            <p class="text-center">Questionnaire Initial Page</p>
-          </div>
-          <div class="col-sm-6">
-            <img class="full-width-img" src="img/pic/giftmasters_recommendation.png"/>
-            <p class="text-center">Gift Recommendation Page</p>
-          <br>
-          <br>
-          </div>
-          <p>Due to confidentiality agreement, I cannot show all my mockups online. But I am willing to share more my work experiences offline!</p>
+        <div class="row">
+            <div class="col-xs-12 detail-wrap">
+                <h3>Overview</h3>
+                <p>This is the project I worked with 199 insights, Inc. We were building a website named Gift masters. It is a website which helps people choose gift for their friends or significant other. With completing a short questionnaire, our system
+                    will give the user a list of personalized gift recommendations.</p>
+                <h3>Design Process</h3>
+                <img class="full-width-img" src="img/pic/giftmasters_designprocess.png" />
+                <h3>My Responsibilities</h3>
+                <ul>
+                  <li>Created wireframes showing the end-to-end experience</li>
+                  <li>Generated a high fidelity prototype for one most complicated use case</li>
+                  <li>Designed and Defined all UI elements</li>
+                </ul>
+                <h3>Sample Mockups</h3>
+                <div class="row">
+                  <div class="col-md-6 col-xs-10">
+                      <img class="full-width-img" src="img/pic/giftmasters_initial.png" />
+                      <p class="text-center">Questionnaire Initial Page</p>
+                  </div>
+                  <div class="col-md-6 col-xs-10">
+                      <img class="full-width-img" src="img/pic/giftmasters_recommendation.png" />
+                      <p class="text-center">Gift Recommendation Page</p>
+                  </div>
+                </div>
+                <p class="small">Due to confidentiality agreement, I cannot show all my mockups online. But I am willing to share more my work experiences offline!</p>
+
+            </div>
 
         </div>
-
-      </div>
-    </div><!-- /.container -->
+    </div>
+    <!-- /.container -->
 
     <div class="footer">
-      <div class="container">
-        <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
-        <div class="footer-social">
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
-          <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+        <div class="container">
+            <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+            <div class="footer-social">
+                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
+
+                    <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+                    <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+            </div>
         </div>
-      </div>
     </div>
 
 
@@ -143,10 +142,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-      // $(document).ready(function(){
-      //   $('#title-row').width($(document).width());
-      // })
-    </script>
-  </body>
+
+</body>
+
 </html>
