--- a/project_kono.html
+++ b/project_kono.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
@@ -13,123 +14,120 @@
     <title>Amber Lin | Kono</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
 
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
     <div class="navbar navbar-fixed-top" role="navigation" id="navi-section">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX/UI Designer</div></a>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-logo" href="index.html"><img src="img/logo.png" />
+                    <div class='logo-name'>Amber Lin</div>
+                    <div class='logo-title'>UX/UI Designer</div>
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse-id">
+                <ul id="navi-menu" class="nav navbar-nav">
+                    <!-- <li class="active"><a href="#">Home</a></li> -->
+                    <li class="active"><a href="index.html">Portfolio</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse-id">
-          <ul id="navi-menu" class="nav navbar-nav">
-            <!-- <li class="active"><a href="#">Home</a></li> -->
-            <li class="active"><a href="index.html">Portfolio</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="resume.html">Resume</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </div>
 
     <div class="container">
-      <div class="row row-summary">
-        <div class="col-xs-12 summary-title">
-          <div><h1>Kono</h1><h3>Quotelet</h3></div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>&nbsp</p>
+        <div class="row row-summary">
+            <div class="col-xs-12 summary-title">
+                <h1>Kono</h1>
+                <h3>Quotelet</h3>
             </div>
-            <div class="item-content">
-              <p>&nbsp</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Date:</p>
+                </div>
+                <div class="item-content">
+                    <p>Oct. 2014 - Feb. 2015</p>
+                </div>
             </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>Date:</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>My Role:</p>
+                </div>
+                <div class="item-content">
+                    <p>UX Designer and Researcher</p>
+                </div>
             </div>
-            <div class="item-content">
-              <p>Oct. 2014 - Feb. 2015</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Skills:</p>
+                </div>
+                <div class="item-content">
+                    <p>Survey Design, Interviews, Diary Study, Prototyping</p>
+                </div>
             </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>My Role:</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Tools:</p>
+                </div>
+                <div class="item-content">
+                    <p>Photoshop, Illustrator</p>
+                </div>
             </div>
-            <div class="item-content">
-              <p>UX Designer and Researcher</p>
-            </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>Skills:</p>
-            </div>
-            <div class="item-content">
-              <p>Survey Design, Interviews, Diary Study, Prototyping</p>
-            </div>
-          </div>
-          <div class='col-xs-12 summary-item'>
-            <div class="item-title">
-              <p>Tools:</p>
-            </div>
-            <div class="item-content">
-              <p>Photoshop, Illustrator</p>
-            </div>
-          </div>
         </div>
-      </div>
-      <div class="row" >
-        <div class="col-xs-7 detail-wrap">
-          <p>This is the project I worked at Kono. We were developing a social tool named Quotelet. Quotelet helps user easily and quickly collect the quote they like, edit and share it with friends when they are reading articles online. So far, it is a plug-in extension that installed in Google Chrome. However, based on our user research, we were thinking to develop a mobile or a tablet version in the future. </p>
-          <br>
-          <h4>My Responsibilities</h4>
-          </br>
-          <p>• Conducted diary studies and interviews to understand target users’ habit of online reading and their experience with Quotelet</p> 
-          <p>• Created wireframes and overall interaction flow</p>
-          <br>
-          <br>
-          <p>I am willing to share more about my work experiences offline!</p> 
-          <br>
-          <br>
-          <a class='attachment-text' href='http://quotelet.getforge.io/'  target="_blank">➢ About Quotelet</a><br> 
-          </p>
+        <div class="row">
+            <div class="col-xs-7 detail-wrap">
+                <h3>Overview</h3>
+                <p>This is the project I worked at Kono. We were developing a social tool named Quotelet. Quotelet helps user easily and quickly collect the quote they like, edit and share it with friends when they are reading articles online. So far, it
+                    is a plug-in extension that installed in Google Chrome. However, based on our user research, we were thinking to develop a mobile or a tablet version in the future. </p>
+                <h3>My Responsibilities</h3>
+                <ul>
+                  <li>Conducted diary studies and interviews to understand target users’ habit of online reading and their experience with Quotelet</li>
+                  <li>Created wireframes and overall interaction flow</li>
+                </ul>
+                <p>I am willing to share more about my work experiences offline!</p>
+
+                <a class='attachment-text' href='http://quotelet.getforge.io/' target="_blank">➢ About Quotelet</a>
+
+            </div>
+            <div class="col-xs-5" id="img-section">
+                <div class="img-text-section">
+                    <img class="project-img" src="img/pic/kono_hp.png" />
+                    <p>Quotelet Personal Page</p>
+                </div>
+            </div>
         </div>
-        <div class="col-xs-5" id="img-section">
-          <div class="img-text-section">
-            <img class="project-img" src="img/pic/kono_hp.png"/>
-            <p>Quotelet Personal Page</p>
-          </div>
-        </div>
-      </div>
-    </div><!-- /.container -->
+    </div>
+    <!-- /.container -->
 
     <div class="footer">
-      <div class="container">
-        <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
-        <div class="footer-social">
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
-          <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+        <div class="container">
+            <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+            <div class="footer-social">
+                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
+
+                    <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+                    <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+            </div>
         </div>
-      </div>
     </div>
 
 
@@ -138,10 +136,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-      // $(document).ready(function(){
-      //   $('#title-row').width($(document).width());
-      // })
-    </script>
-  </body>
+</body>
+
 </html>
